# tracematrix

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/tracematrix/: __main__.py  item.py  matrix.py
src/tracematrix/reporters/: __init__.py  base_reporter.py  csv_reporter.py  html_reporter.py  template.html
tests/: test_matrix_creation.py
tests/functional/: test_matrix_creation.py
tests/functional/data/: tracematrix.csv  tracematrix.html
tests/unittests/: test_item.py  test_matrix.py
