[tool.poetry]
name = "tracematrix"
version = "0.1.0"
description = "Tool to create a traceability matrix"
authors = ["Andreas Finkler"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
