[tool.poetry]
name = "tracematrix"
version = "0.2.0"
description = "Tool to create a traceability matrix"
authors = ["Andreas Finkler"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.8b0", allow-prereleases = true}
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
